// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WalletHeader should delete wallet 1`] = `
<DocumentFragment>
  <header
    data-testid="WalletHeader"
  >
    <div
      class="flex items-center justify-between px-12 py-6 bg-theme-neutral-900"
    >
      <div
        class="flex items-center space-x-4"
      >
        <div
          class="flex"
        >
          <div
            class="sc-AxirZ paroP -mr-1 border-theme-neutral-700"
          >
            <div
              class="sc-AxiKw dzBdqj text-theme-neutral-700"
              height="1em"
              width="1em"
            >
              <svg>
                ark.svg
              </svg>
            </div>
          </div>
          <div
            class="Avatar__AvatarStyled-sc-1vsy2s2-0 pguJo"
            data-testid="Avatar"
          >
            <img
              src="data:image/svg+xml;utf8,conic-gradient(from 288.93103110518746deg at 73.4008641577181% 18.920870559902294%, #ED8936, calc(0 * 100% / 5), transparent 0),conic-gradient(from 570.5765160044176deg at 74.97386082468533% 48.84452706679889%, #FBD38D, calc(1 * 100% / 5), transparent 0),conic-gradient(from 192.3588008315933deg at 28.076561291829154% 76.25451575528506%, #319795, calc(2 * 100% / 5), transparent 0),conic-gradient(from 484.7617427912324deg at 1.4350999579312225% 10.547643913721858%, #F6AD55, calc(3 * 100% / 5), transparent 0),conic-gradient(from 180.17583792000104deg at 14.49450081306515% 61.63718434057836%, #742A2A, calc(4 * 100% / 5), transparent 0)"
              title="abc"
            />
          </div>
        </div>
        <h2
          class="mb-0 text-white"
          data-testid="WalletHeader__name"
        />
        <span
          data-testid="WalletHeader__ledger"
        >
          <div
            class="sc-AxiKw dzBdqj text-theme-neutral-700"
            height="1em"
            width="1em"
          >
            <svg>
              ledger.svg
            </svg>
          </div>
        </span>
        <span
          data-testid="WalletHeader__multisig"
        >
          <div
            class="sc-AxiKw dzBdqj text-theme-neutral-700"
            height="1em"
            width="1em"
          >
            <svg>
              multisig.svg
            </svg>
          </div>
        </span>
      </div>
      <div
        class="flex items-stretch space-x-2"
      >
        <button
          class="px-3 text-theme-neutral-700"
          data-testid="WalletHeader__star-button"
        >
          <div
            class="sc-AxiKw dzBdqj"
            height="1em"
            width="1em"
          >
            <svg>
              star.svg
            </svg>
          </div>
        </button>
        <button
          class="sc-AxjAm ddQVWI"
          color="primary"
          data-testid="WalletHeader__send-button"
          type="button"
        >
          Send
        </button>
        <div
          data-testid="WalletHeader__more-button"
        >
          <div
            class="relative"
            data-testid="dropdown__toggle"
          >
            <button
              class="sc-AxjAm kwTlRm text-left"
              color="primary"
              type="button"
            >
              <div
                class="sc-AxiKw dklFyP"
                height="20"
                width="20"
              >
                <svg>
                  settings.svg
                </svg>
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
    <ul
      class="flex items-stretch px-12 py-10 divide-x-1 divide-theme-neutral-300 space-x-8"
    >
      <li
        class="space-y-2"
      >
        <div
          class="inline-flex items-center space-x-2"
        >
          <p
            class="font-semibold text-sm text-theme-neutral-dark"
          >
            Address
          </p>
          <label>
            <input
              class="sc-AxhUy rBBWa"
              data-testid="WalletHeader__toggle"
              disabled=""
              type="checkbox"
            />
            <div
              class="sc-AxgMl dRIbey"
            >
              <span
                class="sc-AxheI bTHYlW"
              />
            </div>
          </label>
          <p
            class="font-semibold text-sm text-theme-neutral-light"
          >
            Public Key
          </p>
        </div>
        <div>
          <p
            class="inline-block text-lg font-medium"
            data-testid="WalletHeader__address-publickey"
          >
            abc
          </p>
          <button
            class="inline-block px-3 text-theme-neutral focus:outline-none"
            data-testid="WalletHeader__copy-button"
          >
            <div
              class="sc-AxiKw dzBdqj text-theme-primary-400"
              height="1em"
              width="1em"
            >
              <svg>
                copy.svg
              </svg>
            </div>
          </button>
        </div>
      </li>
      <li
        class="pl-8 space-y-2"
      >
        <p
          class="text-sm font-semibold text-theme-neutral-dark"
        >
          Balance
        </p>
        <p
          class="text-lg font-medium"
          data-testid="WalletHeader__balance"
        >
          0
        </p>
      </li>
    </ul>
  </header>
</DocumentFragment>
`;

exports[`WalletHeader should render 1`] = `
<DocumentFragment>
  <header
    data-testid="WalletHeader"
  >
    <div
      class="flex items-center justify-between px-12 py-6 bg-theme-neutral-900"
    >
      <div
        class="flex items-center space-x-4"
      >
        <div
          class="flex"
        >
          <div
            class="sc-AxirZ paroP -mr-1 border-theme-neutral-700"
          >
            <div
              class="sc-AxiKw dzBdqj text-theme-neutral-700"
              height="1em"
              width="1em"
            >
              <svg>
                ark.svg
              </svg>
            </div>
          </div>
          <div
            class="Avatar__AvatarStyled-sc-1vsy2s2-0 pguJo"
            data-testid="Avatar"
          >
            <img
              src="data:image/svg+xml;utf8,conic-gradient(from 288.93103110518746deg at 73.4008641577181% 18.920870559902294%, #ED8936, calc(0 * 100% / 5), transparent 0),conic-gradient(from 570.5765160044176deg at 74.97386082468533% 48.84452706679889%, #FBD38D, calc(1 * 100% / 5), transparent 0),conic-gradient(from 192.3588008315933deg at 28.076561291829154% 76.25451575528506%, #319795, calc(2 * 100% / 5), transparent 0),conic-gradient(from 484.7617427912324deg at 1.4350999579312225% 10.547643913721858%, #F6AD55, calc(3 * 100% / 5), transparent 0),conic-gradient(from 180.17583792000104deg at 14.49450081306515% 61.63718434057836%, #742A2A, calc(4 * 100% / 5), transparent 0)"
              title="abc"
            />
          </div>
        </div>
        <h2
          class="mb-0 text-white"
          data-testid="WalletHeader__name"
        />
      </div>
      <div
        class="flex items-stretch space-x-2"
      >
        <button
          class="px-3 text-theme-neutral-700"
          data-testid="WalletHeader__star-button"
        >
          <div
            class="sc-AxiKw dzBdqj"
            height="1em"
            width="1em"
          >
            <svg>
              star-outline.svg
            </svg>
          </div>
        </button>
        <button
          class="sc-AxjAm ddQVWI"
          color="primary"
          data-testid="WalletHeader__send-button"
          type="button"
        >
          Send
        </button>
        <div
          data-testid="WalletHeader__more-button"
        >
          <div
            class="relative"
            data-testid="dropdown__toggle"
          >
            <button
              class="sc-AxjAm kwTlRm text-left"
              color="primary"
              type="button"
            >
              <div
                class="sc-AxiKw dklFyP"
                height="20"
                width="20"
              >
                <svg>
                  settings.svg
                </svg>
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
    <ul
      class="flex items-stretch px-12 py-10 divide-x-1 divide-theme-neutral-300 space-x-8"
    >
      <li
        class="space-y-2"
      >
        <div
          class="inline-flex items-center space-x-2"
        >
          <p
            class="font-semibold text-sm text-theme-neutral-dark"
          >
            Address
          </p>
          <label>
            <input
              class="sc-AxhUy rBBWa"
              data-testid="WalletHeader__toggle"
              disabled=""
              type="checkbox"
            />
            <div
              class="sc-AxgMl dRIbey"
            >
              <span
                class="sc-AxheI bTHYlW"
              />
            </div>
          </label>
          <p
            class="font-semibold text-sm text-theme-neutral-light"
          >
            Public Key
          </p>
        </div>
        <div>
          <p
            class="inline-block text-lg font-medium"
            data-testid="WalletHeader__address-publickey"
          >
            abc
          </p>
          <button
            class="inline-block px-3 text-theme-neutral focus:outline-none"
            data-testid="WalletHeader__copy-button"
          >
            <div
              class="sc-AxiKw dzBdqj text-theme-primary-400"
              height="1em"
              width="1em"
            >
              <svg>
                copy.svg
              </svg>
            </div>
          </button>
        </div>
      </li>
      <li
        class="pl-8 space-y-2"
      >
        <p
          class="text-sm font-semibold text-theme-neutral-dark"
        >
          Balance
        </p>
        <p
          class="text-lg font-medium"
          data-testid="WalletHeader__balance"
        >
          0
        </p>
      </li>
    </ul>
  </header>
</DocumentFragment>
`;

exports[`WalletHeader should show modifiers 1`] = `
<DocumentFragment>
  <header
    data-testid="WalletHeader"
  >
    <div
      class="flex items-center justify-between px-12 py-6 bg-theme-neutral-900"
    >
      <div
        class="flex items-center space-x-4"
      >
        <div
          class="flex"
        >
          <div
            class="sc-AxirZ paroP -mr-1 border-theme-neutral-700"
          >
            <div
              class="sc-AxiKw dzBdqj text-theme-neutral-700"
              height="1em"
              width="1em"
            >
              <svg>
                ark.svg
              </svg>
            </div>
          </div>
          <div
            class="Avatar__AvatarStyled-sc-1vsy2s2-0 pguJo"
            data-testid="Avatar"
          >
            <img
              src="data:image/svg+xml;utf8,conic-gradient(from 288.93103110518746deg at 73.4008641577181% 18.920870559902294%, #ED8936, calc(0 * 100% / 5), transparent 0),conic-gradient(from 570.5765160044176deg at 74.97386082468533% 48.84452706679889%, #FBD38D, calc(1 * 100% / 5), transparent 0),conic-gradient(from 192.3588008315933deg at 28.076561291829154% 76.25451575528506%, #319795, calc(2 * 100% / 5), transparent 0),conic-gradient(from 484.7617427912324deg at 1.4350999579312225% 10.547643913721858%, #F6AD55, calc(3 * 100% / 5), transparent 0),conic-gradient(from 180.17583792000104deg at 14.49450081306515% 61.63718434057836%, #742A2A, calc(4 * 100% / 5), transparent 0)"
              title="abc"
            />
          </div>
        </div>
        <h2
          class="mb-0 text-white"
          data-testid="WalletHeader__name"
        />
        <span
          data-testid="WalletHeader__ledger"
        >
          <div
            class="sc-AxiKw dzBdqj text-theme-neutral-700"
            height="1em"
            width="1em"
          >
            <svg>
              ledger.svg
            </svg>
          </div>
        </span>
        <span
          data-testid="WalletHeader__multisig"
        >
          <div
            class="sc-AxiKw dzBdqj text-theme-neutral-700"
            height="1em"
            width="1em"
          >
            <svg>
              multisig.svg
            </svg>
          </div>
        </span>
      </div>
      <div
        class="flex items-stretch space-x-2"
      >
        <button
          class="px-3 text-theme-neutral-700"
          data-testid="WalletHeader__star-button"
        >
          <div
            class="sc-AxiKw dzBdqj"
            height="1em"
            width="1em"
          >
            <svg>
              star.svg
            </svg>
          </div>
        </button>
        <button
          class="sc-AxjAm ddQVWI"
          color="primary"
          data-testid="WalletHeader__send-button"
          type="button"
        >
          Send
        </button>
        <div
          data-testid="WalletHeader__more-button"
        >
          <div
            class="relative"
            data-testid="dropdown__toggle"
          >
            <button
              class="sc-AxjAm kwTlRm text-left"
              color="primary"
              type="button"
            >
              <div
                class="sc-AxiKw dklFyP"
                height="20"
                width="20"
              >
                <svg>
                  settings.svg
                </svg>
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
    <ul
      class="flex items-stretch px-12 py-10 divide-x-1 divide-theme-neutral-300 space-x-8"
    >
      <li
        class="space-y-2"
      >
        <div
          class="inline-flex items-center space-x-2"
        >
          <p
            class="font-semibold text-sm text-theme-neutral-dark"
          >
            Address
          </p>
          <label>
            <input
              class="sc-AxhUy rBBWa"
              data-testid="WalletHeader__toggle"
              disabled=""
              type="checkbox"
            />
            <div
              class="sc-AxgMl dRIbey"
            >
              <span
                class="sc-AxheI bTHYlW"
              />
            </div>
          </label>
          <p
            class="font-semibold text-sm text-theme-neutral-light"
          >
            Public Key
          </p>
        </div>
        <div>
          <p
            class="inline-block text-lg font-medium"
            data-testid="WalletHeader__address-publickey"
          >
            abc
          </p>
          <button
            class="inline-block px-3 text-theme-neutral focus:outline-none"
            data-testid="WalletHeader__copy-button"
          >
            <div
              class="sc-AxiKw dzBdqj text-theme-primary-400"
              height="1em"
              width="1em"
            >
              <svg>
                copy.svg
              </svg>
            </div>
          </button>
        </div>
      </li>
      <li
        class="pl-8 space-y-2"
      >
        <p
          class="text-sm font-semibold text-theme-neutral-dark"
        >
          Balance
        </p>
        <p
          class="text-lg font-medium"
          data-testid="WalletHeader__balance"
        >
          0
        </p>
      </li>
    </ul>
  </header>
</DocumentFragment>
`;

exports[`WalletHeader should show publicKey 1`] = `
<DocumentFragment>
  <header
    data-testid="WalletHeader"
  >
    <div
      class="flex items-center justify-between px-12 py-6 bg-theme-neutral-900"
    >
      <div
        class="flex items-center space-x-4"
      >
        <div
          class="flex"
        >
          <div
            class="sc-AxirZ paroP -mr-1 border-theme-neutral-700"
          >
            <div
              class="sc-AxiKw dzBdqj text-theme-neutral-700"
              height="1em"
              width="1em"
            >
              <svg>
                ark.svg
              </svg>
            </div>
          </div>
          <div
            class="Avatar__AvatarStyled-sc-1vsy2s2-0 pguJo"
            data-testid="Avatar"
          >
            <img
              src="data:image/svg+xml;utf8,conic-gradient(from 288.93103110518746deg at 73.4008641577181% 18.920870559902294%, #ED8936, calc(0 * 100% / 5), transparent 0),conic-gradient(from 570.5765160044176deg at 74.97386082468533% 48.84452706679889%, #FBD38D, calc(1 * 100% / 5), transparent 0),conic-gradient(from 192.3588008315933deg at 28.076561291829154% 76.25451575528506%, #319795, calc(2 * 100% / 5), transparent 0),conic-gradient(from 484.7617427912324deg at 1.4350999579312225% 10.547643913721858%, #F6AD55, calc(3 * 100% / 5), transparent 0),conic-gradient(from 180.17583792000104deg at 14.49450081306515% 61.63718434057836%, #742A2A, calc(4 * 100% / 5), transparent 0)"
              title="abc"
            />
          </div>
        </div>
        <h2
          class="mb-0 text-white"
          data-testid="WalletHeader__name"
        />
      </div>
      <div
        class="flex items-stretch space-x-2"
      >
        <button
          class="px-3 text-theme-neutral-700"
          data-testid="WalletHeader__star-button"
        >
          <div
            class="sc-AxiKw dzBdqj"
            height="1em"
            width="1em"
          >
            <svg>
              star-outline.svg
            </svg>
          </div>
        </button>
        <button
          class="sc-AxjAm ddQVWI"
          color="primary"
          data-testid="WalletHeader__send-button"
          type="button"
        >
          Send
        </button>
        <div
          data-testid="WalletHeader__more-button"
        >
          <div
            class="relative"
            data-testid="dropdown__toggle"
          >
            <button
              class="sc-AxjAm kwTlRm text-left"
              color="primary"
              type="button"
            >
              <div
                class="sc-AxiKw dklFyP"
                height="20"
                width="20"
              >
                <svg>
                  settings.svg
                </svg>
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
    <ul
      class="flex items-stretch px-12 py-10 divide-x-1 divide-theme-neutral-300 space-x-8"
    >
      <li
        class="space-y-2"
      >
        <div
          class="inline-flex items-center space-x-2"
        >
          <p
            class="font-semibold text-sm text-theme-neutral-light"
          >
            Address
          </p>
          <label>
            <input
              class="sc-AxhUy rBBWa"
              data-testid="WalletHeader__toggle"
              type="checkbox"
            />
            <div
              class="sc-AxgMl dRIbey"
            >
              <span
                class="sc-AxheI bTHYlW"
              />
            </div>
          </label>
          <p
            class="font-semibold text-sm text-theme-neutral-dark"
          >
            Public Key
          </p>
        </div>
        <div>
          <p
            class="inline-block text-lg font-medium"
            data-testid="WalletHeader__address-publickey"
          >
            123
          </p>
          <button
            class="inline-block px-3 text-theme-neutral focus:outline-none"
            data-testid="WalletHeader__copy-button"
          >
            <div
              class="sc-AxiKw dzBdqj text-theme-primary-400"
              height="1em"
              width="1em"
            >
              <svg>
                copy.svg
              </svg>
            </div>
          </button>
        </div>
      </li>
    </ul>
  </header>
</DocumentFragment>
`;
